--- a/NewsApp-war/web/start/startcss.css
+++ b/NewsApp-war/web/start/startcss.css
@@ -40,7 +40,7 @@ a:hover{ text-decoration: none; }
 .header .fa.fa-fw.fa-bars{ color: #fff; }
 .header .navbar-light .navbar-nav .nav-link {
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px 35px;
     position: relative;
 }
 .header  li>a>.label {
@@ -48,7 +48,7 @@ a:hover{ text-decoration: none; }
     top: 9px;
     right: 7px;
     text-align: center;
-    font-size: 9px;
+    font-size: 14px;
     padding: 2px 3px;
     line-height: .9; background-color: #333;    border-radius: .25em;
 }
@@ -131,7 +131,7 @@ a.navbar-brand {
 /***    left menu ****/
 
 /***********************  TOP Bar ********************/
-.sidebar{ width:220px;  background-color:#000;transition: all 0.5s  ease-in-out; }
+.sidebar{ width:300px;  background-color:#000;transition: all 0.5s  ease-in-out; }
 .bg-defoult{background-color:#222;}
 .sidebar ul{ list-style:none; margin:0px; padding:0px; }
 .sidebar li a,.sidebar li a.collapsed.active{ display:block; padding:8px 12px; color:#fff;border-left:0px solid #dedede;  text-decoration:none}
@@ -212,6 +212,14 @@ a.navbar-brand {
 }
 
 .fliph .user-panel{ display: none; }
+
+.main-table-column .main-table-row .main-table-table{
+    vertical-align: top;
+    text-align: left;
+    width: 10px;
+    height: 100%;
+}
+
 
 /*!
  * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
